--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "MOSA-Project"]
 	path = external/MOSA-Project
-	url = https://github.com/mosa/MOSA-Project.git
+	url = https://github.com/Arakis/MOSA-Project.git
