--- a/src/lonos.kernel.core/lonos.kernel.core.csproj
+++ b/src/lonos.kernel.core/lonos.kernel.core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Serial.cs" />
     <Compile Include="Debug\KernelMessage.cs" />
     <Compile Include="Terminal\Terminal.cs" />
+    <Compile Include="Interrupts\InterruptInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Korlib\Mosa.Korlib.csproj">
