--- a/src/lonos.kernel.lib/lonos.kernel.lib.csproj
+++ b/src/lonos.kernel.lib/lonos.kernel.lib.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Structs\NullTerminatedString.cs" />
     <Compile Include="Structs\USize.cs" />
+    <Compile Include="Structs\FileHandle.cs" />
+    <Compile Include="IKernelApi.cs" />
+    <Compile Include="Structs\SSize.cs" />
+    <Compile Include="ApiContext.cs" />
+    <Compile Include="IFile.cs" />
+    <Compile Include="FileExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Elf\" />
