--- a/src/lonos.kernel.core/lonos.kernel.core.csproj
+++ b/src/lonos.kernel.core/lonos.kernel.core.csproj
@@ -91,6 +91,7 @@
     <Folder Include="Debug\" />
     <Folder Include="External\" />
     <Folder Include="Terminal\" />
+    <Folder Include="Devices\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
