first working framebuffer in efi

--- a/src/lonos.kernel.core/lonos.kernel.core.csproj
+++ b/src/lonos.kernel.core/lonos.kernel.core.csproj
@@ -63,6 +63,8 @@
     <Compile Include="Devices\Terminal\Terminal.cs" />
     <Compile Include="Devices\Devices.cs" />
     <Compile Include="Api\ApiHost.cs" />
+    <Compile Include="Devices\Console\ConsoleDevice.cs" />
+    <Compile Include="Devices\FrameBuffer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Korlib\Mosa.Korlib.csproj">
