--- a/src/lonos.kernel.api/lonos.kernel.api.csproj
+++ b/src/lonos.kernel.api/lonos.kernel.api.csproj
@@ -5,9 +5,9 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
     <RootNamespace>lonos.kernel</RootNamespace>
-    <AssemblyName>lonos.core.classlib</AssemblyName>
+    <AssemblyName>lonos.kernel.api</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <ProjectGuid>{FA6E1560-C2D5-41BB-9E7C-D54D0F711918}</ProjectGuid>
+    <ProjectGuid>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</ProjectGuid>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,14 +43,19 @@
       <Project>{A47B7998-4EE8-4AF8-9373-C664FDEDDC65}</Project>
       <Name>Mosa.Runtime.x86</Name>
     </ProjectReference>
-    <ProjectReference Include="..\lonos.kernel.api\lonos.kernel.api.csproj">
-      <Project>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</Project>
-      <Name>lonos.kernel.api</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\lonos.kernel.unixapi\lonos.kernel.unixapi.csproj">
-      <Project>{1DAF7D31-54DC-4B15-A14E-15206073C579}</Project>
-      <Name>lonos.kernel.unixapi</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Structs\NullTerminatedString.cs" />
+    <Compile Include="Structs\USize.cs" />
+    <Compile Include="Structs\FileHandle.cs" />
+    <Compile Include="Structs\SSize.cs" />
+    <Compile Include="Structs\Addr.cs" />
+    <Compile Include="IKernelApi.cs" />
+    <Compile Include="IFile.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Elf\" />
+    <Folder Include="Fonts\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
