--- a/src/lonos.kernel.lib/lonos.kernel.lib.csproj
+++ b/src/lonos.kernel.lib/lonos.kernel.lib.csproj
@@ -43,6 +43,14 @@
       <Project>{A47B7998-4EE8-4AF8-9373-C664FDEDDC65}</Project>
       <Name>Mosa.Runtime.x86</Name>
     </ProjectReference>
+    <ProjectReference Include="..\lonos.kernel.api\lonos.kernel.api.csproj">
+      <Project>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</Project>
+      <Name>lonos.kernel.api</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\lonos.kernel.unixapi\lonos.kernel.unixapi.csproj">
+      <Project>{1DAF7D31-54DC-4B15-A14E-15206073C579}</Project>
+      <Name>lonos.kernel.unixapi</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Elf\ElfHeader.cs" />
@@ -50,22 +58,16 @@
     <Compile Include="Elf\ElfSymbol.cs" />
     <Compile Include="StringBuffer.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="Structs\NullTerminatedString.cs" />
-    <Compile Include="Structs\USize.cs" />
-    <Compile Include="Structs\FileHandle.cs" />
-    <Compile Include="IKernelApi.cs" />
-    <Compile Include="Structs\SSize.cs" />
     <Compile Include="ApiContext.cs" />
-    <Compile Include="IFile.cs" />
     <Compile Include="FileExtensions.cs" />
-    <Compile Include="Structs\Addr.cs" />
     <Compile Include="Fonts\PSF2Header.cs" />
     <Compile Include="Fonts\PSF1Header.cs" />
+    <Compile Include="KMath.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Elf\" />
-    <Folder Include="Structs\" />
     <Folder Include="Fonts\" />
+    <Folder Include="Structs\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
