--- a/src/lonos.kernel.unixapi/lonos.kernel.unixapi.csproj
+++ b/src/lonos.kernel.unixapi/lonos.kernel.unixapi.csproj
@@ -5,9 +5,9 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
     <RootNamespace>lonos.kernel</RootNamespace>
-    <AssemblyName>lonos.core.classlib</AssemblyName>
+    <AssemblyName>lonos.kernel.unixapi</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <ProjectGuid>{FA6E1560-C2D5-41BB-9E7C-D54D0F711918}</ProjectGuid>
+    <ProjectGuid>{1DAF7D31-54DC-4B15-A14E-15206073C579}</ProjectGuid>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -47,10 +47,10 @@
       <Project>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</Project>
       <Name>lonos.kernel.api</Name>
     </ProjectReference>
-    <ProjectReference Include="..\lonos.kernel.unixapi\lonos.kernel.unixapi.csproj">
-      <Project>{1DAF7D31-54DC-4B15-A14E-15206073C579}</Project>
-      <Name>lonos.kernel.unixapi</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="IUnixKernelApi.cs" />
+    <Compile Include="GFP.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
