--- a/src/lonos.kernel.loader/lonos.kernel.loader.csproj
+++ b/src/lonos.kernel.loader/lonos.kernel.loader.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Adresse.cs" />
     <Compile Include="Serial.cs" />
     <Compile Include="KernelMessage.cs" />
+    <Compile Include="Memory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Korlib\Mosa.Korlib.csproj">
@@ -55,6 +56,10 @@
     <ProjectReference Include="..\lonos.kernel.lib\lonos.kernel.lib.csproj">
       <Project>{2D21AF60-8366-430A-9579-1B0CCD31910F}</Project>
       <Name>lonos.kernel.lib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\lonos.kernel.api\lonos.kernel.api.csproj">
+      <Project>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</Project>
+      <Name>lonos.kernel.api</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
