--- a/src/lonos.build/lonos.build.csproj
+++ b/src/lonos.build/lonos.build.csproj
@@ -59,7 +59,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LonosBuilder_Loader.cs" />
-    <Compile Include="Address.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Utility.Launcher\Mosa.Utility.Launcher.csproj">
@@ -85,6 +84,10 @@
     <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Platform.x64\Mosa.Platform.x64.csproj">
       <Project>{F445DB8E-E25A-41EF-A158-C742F14E94E4}</Project>
       <Name>Mosa.Platform.x64</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\lonos.kernel.config\lonos.kernel.config.csproj">
+      <Project>{317E8C4B-089B-469B-8789-D76EB2F87504}</Project>
+      <Name>lonos.kernel.config</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
