--- a/src/lonos.kernel.loader/lonos.kernel.loader.csproj
+++ b/src/lonos.kernel.loader/lonos.kernel.loader.csproj
@@ -34,10 +34,9 @@
     <Compile Include="Start.cs" />
     <Compile Include="MultiBoot.cs" />
     <Compile Include="Debug.cs" />
-    <Compile Include="KernelMemory.cs" />
-    <Compile Include="Serial.cs" />
+    <Compile Include="BootMemory.cs" />
     <Compile Include="KernelMessage.cs" />
-    <Compile Include="Memory.cs" />
+    <Compile Include="KernelMessageWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Korlib\Mosa.Korlib.csproj">
