--- a/src/lonos.kernel.core/lonos.kernel.core.csproj
+++ b/src/lonos.kernel.core/lonos.kernel.core.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Memory\PageFrameAllocator.cs" />
     <Compile Include="Memory\Allocator.cs" />
     <Compile Include="Memory\KernelMemoryMap.cs" />
+    <Compile Include="Memory\PageFrameAllocator2.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Korlib\Mosa.Korlib.csproj">
