--- a/src/lonos.test.console/lonos.test.console.csproj
+++ b/src/lonos.test.console/lonos.test.console.csproj
@@ -14,7 +14,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;BITS64</DefineConstants>
+    <DefineConstants>DEBUG;BITS_64</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ExternalConsole>true</ExternalConsole>
@@ -39,6 +39,24 @@
     <Compile Include="..\lonos.kernel.core\buddy-malloc.cs">
       <Link>buddy-malloc.cs</Link>
     </Compile>
+    <Compile Include="alloc2\EmptyClass.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="alloc2\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\lonos.core.classlib\lonos.core.classlib.csproj">
+      <Project>{FA6E1560-C2D5-41BB-9E7C-D54D0F711918}</Project>
+      <Name>lonos.core.classlib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\lonos.kernel.lib\lonos.kernel.lib.csproj">
+      <Project>{2D21AF60-8366-430A-9579-1B0CCD31910F}</Project>
+      <Name>lonos.kernel.lib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\lonos.kernel.api\lonos.kernel.api.csproj">
+      <Project>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</Project>
+      <Name>lonos.kernel.api</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
