--- a/src/lonos.test.console/lonos.test.console.csproj
+++ b/src/lonos.test.console/lonos.test.console.csproj
@@ -41,6 +41,8 @@
     </Compile>
     <Compile Include="alloc2\EmptyClass.cs" />
     <Compile Include="Alloc3\Alloc3.cs" />
+    <Compile Include="alloc4.cs" />
+    <Compile Include="alloc4Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="alloc2\" />
