--- a/src/lonos.kernel.core/lonos.kernel.core.csproj
+++ b/src/lonos.kernel.core/lonos.kernel.core.csproj
@@ -7,7 +7,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>lonos.kernel.core</RootNamespace>
     <AssemblyName>lonos.kernel.core</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +20,7 @@
     <ConsolePause>false</ConsolePause>
     <NoStdLib>true</NoStdLib>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>Latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
@@ -29,12 +30,13 @@
     <ConsolePause>false</ConsolePause>
     <NoStdLib>true</NoStdLib>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>Latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Start.cs" />
     <Compile Include="Memory\Memory.cs" />
     <Compile Include="Elf\KernelElf.cs" />
-    <Compile Include="Memory\KernelMemory.cs" />
+    <Compile Include="Memory\ManagedMemoy.cs" />
     <Compile Include="Interrupts\IDTMosa.cs" />
     <Compile Include="Interrupts\IDTStack.cs" />
     <Compile Include="Debug\Panic.cs" />
@@ -58,8 +60,9 @@
     <Compile Include="Memory\PageFrameAllocator.cs" />
     <Compile Include="Memory\Allocator.cs" />
     <Compile Include="Memory\KernelMemoryMap.cs" />
-    <Compile Include="Memory\PageFrameAllocator2.cs" />
     <Compile Include="buddy-malloc.cs" />
+    <Compile Include="Memory\RawVirtualFrameAllocator.cs" />
+    <Compile Include="KList.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Korlib\Mosa.Korlib.csproj">
