--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,9 +43,9 @@ for:
 
     after_test:
 
-    nuget:
+    #nuget:
 
-    test: off
+    #test: off
 
     artifacts:
 
@@ -71,9 +71,9 @@ for:
 
     after_test:
 
-    nuget:
+    #nuget:
 
-    test: off
+    #test: off
 
     assembly_info:
       patch: true
